syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.orderms.product.grpc";
option java_outer_classname = "ProductServiceProto";

package productservice;

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  string category = 4;
}

message CreateProductResponse {
  string product_id = 1;
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message UpdateProductRequest {
  string product_id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string category = 5;
}

message UpdateProductResponse {
  bool success = 1;
}

message DeleteProductRequest {
  string product_id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message ListProductsRequest {
  string category = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
}

message Product {
  string product_id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string category = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}
